// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`normalize-page > en-US getting-started 1`] = `
{
  "activeIndex": 1,
  "activeMetadata": undefined,
  "activePath": [
    {
      "children": [
        {
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "Getting Started",
          "type": "doc",
        },
        {
          "name": "options",
          "route": "/docs/options",
          "title": "Options",
          "type": "doc",
        },
        {
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "Global Configuration",
          "type": "doc",
        },
        {
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "Data Fetching",
          "type": "doc",
        },
        {
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "Auto Revalidation",
          "type": "doc",
        },
        {
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "Conditional Data Fetching",
          "type": "doc",
        },
        {
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "Arguments",
          "type": "doc",
        },
        {
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "Mutation",
          "type": "doc",
        },
        {
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "Pagination",
          "type": "doc",
        },
        {
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "Prefetching",
          "type": "doc",
        },
        {
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG and SSR",
          "type": "doc",
        },
        {
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "Middleware",
          "type": "doc",
        },
        {
          "children": [
            {
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "Cache",
              "type": "doc",
            },
            {
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "Performance",
              "type": "doc",
            },
            {
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "Advanced",
          "type": "doc",
        },
        {
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "Change Log",
          "type": "doc",
        },
      ],
      "name": "docs",
      "route": "/docs",
      "title": "Docs",
      "type": "doc",
    },
    {
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "doc",
    },
  ],
  "activeThemeContext": {
    "breadcrumb": true,
    "collapsed": undefined,
    "footer": true,
    "layout": "default",
    "navbar": true,
    "pagination": true,
    "sidebar": true,
    "timestamp": true,
    "toc": true,
    "typesetting": "default",
  },
  "activeType": "doc",
  "directories": [
    {
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "children": [
        {
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "Getting Started",
          "type": "doc",
        },
        {
          "name": "options",
          "route": "/docs/options",
          "title": "Options",
          "type": "doc",
        },
        {
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "Global Configuration",
          "type": "doc",
        },
        {
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "Data Fetching",
          "type": "doc",
        },
        {
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "Auto Revalidation",
          "type": "doc",
        },
        {
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "Conditional Data Fetching",
          "type": "doc",
        },
        {
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "Arguments",
          "type": "doc",
        },
        {
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "Mutation",
          "type": "doc",
        },
        {
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "Pagination",
          "type": "doc",
        },
        {
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "Prefetching",
          "type": "doc",
        },
        {
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG and SSR",
          "type": "doc",
        },
        {
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "Middleware",
          "type": "doc",
        },
        {
          "children": [
            {
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "Cache",
              "type": "doc",
            },
            {
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "Performance",
              "type": "doc",
            },
            {
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "Advanced",
          "type": "doc",
        },
        {
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "Change Log",
          "type": "doc",
        },
      ],
      "name": "docs",
      "route": "/docs",
      "title": "Docs",
      "type": "doc",
    },
    {
      "children": [
        {
          "frontMatter": {
            "title": "Basic Usage",
          },
          "name": "basic",
          "route": "/examples/basic",
          "title": "Basic Usage",
          "type": "doc",
        },
        {
          "frontMatter": {
            "title": "Authentication",
          },
          "name": "auth",
          "route": "/examples/auth",
          "title": "Authentication",
          "type": "doc",
        },
        {
          "frontMatter": {
            "title": "Infinite Loading",
          },
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
          "title": "Infinite Loading",
          "type": "doc",
        },
        {
          "frontMatter": {
            "title": "Error Handling",
          },
          "name": "error-handling",
          "route": "/examples/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "frontMatter": {
            "title": "Next.js SSR",
          },
          "name": "ssr",
          "route": "/examples/ssr",
          "title": "Next.js SSR",
          "type": "doc",
        },
      ],
      "name": "examples",
      "route": "/examples",
      "title": "Examples",
      "type": "doc",
    },
    {
      "children": [
        {
          "frontMatter": {
            "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "name": "swr-v1",
          "route": "/blog/swr-v1",
          "title": "Announcing SWR 1.0",
          "type": "doc",
        },
      ],
      "name": "blog",
      "route": "/blog",
      "title": "Blog",
      "type": "doc",
    },
  ],
  "docsDirectories": [
    {
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "isUnderCurrentDocsTree": true,
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "children": [
        {
          "isUnderCurrentDocsTree": true,
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "Getting Started",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "options",
          "route": "/docs/options",
          "title": "Options",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "Global Configuration",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "Data Fetching",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "Auto Revalidation",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "Conditional Data Fetching",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "Arguments",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "Mutation",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "Pagination",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "Prefetching",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG and SSR",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "Middleware",
          "type": "doc",
        },
        {
          "children": [
            {
              "isUnderCurrentDocsTree": true,
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "Cache",
              "type": "doc",
            },
            {
              "isUnderCurrentDocsTree": true,
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "Performance",
              "type": "doc",
            },
            {
              "isUnderCurrentDocsTree": true,
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "isUnderCurrentDocsTree": true,
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "Advanced",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "Change Log",
          "type": "doc",
        },
      ],
      "isUnderCurrentDocsTree": true,
      "name": "docs",
      "route": "/docs",
      "title": "Docs",
      "type": "doc",
    },
    {
      "children": [
        {
          "frontMatter": {
            "title": "Basic Usage",
          },
          "isUnderCurrentDocsTree": true,
          "name": "basic",
          "route": "/examples/basic",
          "title": "Basic Usage",
          "type": "doc",
        },
        {
          "frontMatter": {
            "title": "Authentication",
          },
          "isUnderCurrentDocsTree": true,
          "name": "auth",
          "route": "/examples/auth",
          "title": "Authentication",
          "type": "doc",
        },
        {
          "frontMatter": {
            "title": "Infinite Loading",
          },
          "isUnderCurrentDocsTree": true,
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
          "title": "Infinite Loading",
          "type": "doc",
        },
        {
          "frontMatter": {
            "title": "Error Handling",
          },
          "isUnderCurrentDocsTree": true,
          "name": "error-handling",
          "route": "/examples/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "frontMatter": {
            "title": "Next.js SSR",
          },
          "isUnderCurrentDocsTree": true,
          "name": "ssr",
          "route": "/examples/ssr",
          "title": "Next.js SSR",
          "type": "doc",
        },
      ],
      "isUnderCurrentDocsTree": true,
      "name": "examples",
      "route": "/examples",
      "title": "Examples",
      "type": "doc",
    },
    {
      "children": [
        {
          "frontMatter": {
            "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "isUnderCurrentDocsTree": true,
          "name": "swr-v1",
          "route": "/blog/swr-v1",
          "title": "Announcing SWR 1.0",
          "type": "doc",
        },
      ],
      "isUnderCurrentDocsTree": true,
      "name": "blog",
      "route": "/blog",
      "title": "Blog",
      "type": "doc",
    },
  ],
  "flatDocsDirectories": [
    {
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "isUnderCurrentDocsTree": true,
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "options",
      "route": "/docs/options",
      "title": "Options",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "Global Configuration",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "Data Fetching",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "Auto Revalidation",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "Conditional Data Fetching",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "Arguments",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "Mutation",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "Pagination",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "Prefetching",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG and SSR",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "Middleware",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "Cache",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "Performance",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "Change Log",
      "type": "doc",
    },
    {
      "frontMatter": {
        "title": "Basic Usage",
      },
      "isUnderCurrentDocsTree": true,
      "name": "basic",
      "route": "/examples/basic",
      "title": "Basic Usage",
      "type": "doc",
    },
    {
      "frontMatter": {
        "title": "Authentication",
      },
      "isUnderCurrentDocsTree": true,
      "name": "auth",
      "route": "/examples/auth",
      "title": "Authentication",
      "type": "doc",
    },
    {
      "frontMatter": {
        "title": "Infinite Loading",
      },
      "isUnderCurrentDocsTree": true,
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "Infinite Loading",
      "type": "doc",
    },
    {
      "frontMatter": {
        "title": "Error Handling",
      },
      "isUnderCurrentDocsTree": true,
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "frontMatter": {
        "title": "Next.js SSR",
      },
      "isUnderCurrentDocsTree": true,
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "frontMatter": {
        "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "isUnderCurrentDocsTree": true,
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "Announcing SWR 1.0",
      "type": "doc",
    },
  ],
  "topLevelNavbarItems": [],
}
`;

exports[`normalize-page > en-US home 1`] = `
{
  "activeIndex": 0,
  "activeMetadata": {
    "title": "React Hooks for Data Fetching",
  },
  "activePath": [
    {
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
  ],
  "activeThemeContext": {
    "breadcrumb": true,
    "collapsed": undefined,
    "footer": true,
    "layout": "default",
    "navbar": true,
    "pagination": true,
    "sidebar": true,
    "timestamp": true,
    "toc": true,
    "typesetting": "default",
  },
  "activeType": "doc",
  "directories": [
    {
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "children": [
        {
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "Getting Started",
          "type": "doc",
        },
        {
          "name": "options",
          "route": "/docs/options",
          "title": "Options",
          "type": "doc",
        },
        {
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "Global Configuration",
          "type": "doc",
        },
        {
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "Data Fetching",
          "type": "doc",
        },
        {
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "Auto Revalidation",
          "type": "doc",
        },
        {
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "Conditional Data Fetching",
          "type": "doc",
        },
        {
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "Arguments",
          "type": "doc",
        },
        {
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "Mutation",
          "type": "doc",
        },
        {
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "Pagination",
          "type": "doc",
        },
        {
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "Prefetching",
          "type": "doc",
        },
        {
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG and SSR",
          "type": "doc",
        },
        {
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "Middleware",
          "type": "doc",
        },
        {
          "children": [
            {
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "Cache",
              "type": "doc",
            },
            {
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "Performance",
              "type": "doc",
            },
            {
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "Advanced",
          "type": "doc",
        },
        {
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "Change Log",
          "type": "doc",
        },
      ],
      "name": "docs",
      "route": "/docs",
      "title": "Docs",
      "type": "doc",
    },
    {
      "children": [
        {
          "frontMatter": {
            "title": "Basic Usage",
          },
          "name": "basic",
          "route": "/examples/basic",
          "title": "Basic Usage",
          "type": "doc",
        },
        {
          "frontMatter": {
            "title": "Authentication",
          },
          "name": "auth",
          "route": "/examples/auth",
          "title": "Authentication",
          "type": "doc",
        },
        {
          "frontMatter": {
            "title": "Infinite Loading",
          },
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
          "title": "Infinite Loading",
          "type": "doc",
        },
        {
          "frontMatter": {
            "title": "Error Handling",
          },
          "name": "error-handling",
          "route": "/examples/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "frontMatter": {
            "title": "Next.js SSR",
          },
          "name": "ssr",
          "route": "/examples/ssr",
          "title": "Next.js SSR",
          "type": "doc",
        },
      ],
      "name": "examples",
      "route": "/examples",
      "title": "Examples",
      "type": "doc",
    },
    {
      "children": [
        {
          "frontMatter": {
            "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "name": "swr-v1",
          "route": "/blog/swr-v1",
          "title": "Announcing SWR 1.0",
          "type": "doc",
        },
      ],
      "name": "blog",
      "route": "/blog",
      "title": "Blog",
      "type": "doc",
    },
  ],
  "docsDirectories": [
    {
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "isUnderCurrentDocsTree": true,
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "children": [
        {
          "isUnderCurrentDocsTree": true,
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "Getting Started",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "options",
          "route": "/docs/options",
          "title": "Options",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "Global Configuration",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "Data Fetching",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "Auto Revalidation",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "Conditional Data Fetching",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "Arguments",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "Mutation",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "Pagination",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "Prefetching",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG and SSR",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "Middleware",
          "type": "doc",
        },
        {
          "children": [
            {
              "isUnderCurrentDocsTree": true,
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "Cache",
              "type": "doc",
            },
            {
              "isUnderCurrentDocsTree": true,
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "Performance",
              "type": "doc",
            },
            {
              "isUnderCurrentDocsTree": true,
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "isUnderCurrentDocsTree": true,
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "Advanced",
          "type": "doc",
        },
        {
          "isUnderCurrentDocsTree": true,
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "Change Log",
          "type": "doc",
        },
      ],
      "isUnderCurrentDocsTree": true,
      "name": "docs",
      "route": "/docs",
      "title": "Docs",
      "type": "doc",
    },
    {
      "children": [
        {
          "frontMatter": {
            "title": "Basic Usage",
          },
          "isUnderCurrentDocsTree": true,
          "name": "basic",
          "route": "/examples/basic",
          "title": "Basic Usage",
          "type": "doc",
        },
        {
          "frontMatter": {
            "title": "Authentication",
          },
          "isUnderCurrentDocsTree": true,
          "name": "auth",
          "route": "/examples/auth",
          "title": "Authentication",
          "type": "doc",
        },
        {
          "frontMatter": {
            "title": "Infinite Loading",
          },
          "isUnderCurrentDocsTree": true,
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
          "title": "Infinite Loading",
          "type": "doc",
        },
        {
          "frontMatter": {
            "title": "Error Handling",
          },
          "isUnderCurrentDocsTree": true,
          "name": "error-handling",
          "route": "/examples/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "frontMatter": {
            "title": "Next.js SSR",
          },
          "isUnderCurrentDocsTree": true,
          "name": "ssr",
          "route": "/examples/ssr",
          "title": "Next.js SSR",
          "type": "doc",
        },
      ],
      "isUnderCurrentDocsTree": true,
      "name": "examples",
      "route": "/examples",
      "title": "Examples",
      "type": "doc",
    },
    {
      "children": [
        {
          "frontMatter": {
            "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "isUnderCurrentDocsTree": true,
          "name": "swr-v1",
          "route": "/blog/swr-v1",
          "title": "Announcing SWR 1.0",
          "type": "doc",
        },
      ],
      "isUnderCurrentDocsTree": true,
      "name": "blog",
      "route": "/blog",
      "title": "Blog",
      "type": "doc",
    },
  ],
  "flatDocsDirectories": [
    {
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "isUnderCurrentDocsTree": true,
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "options",
      "route": "/docs/options",
      "title": "Options",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "Global Configuration",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "Data Fetching",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "Auto Revalidation",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "Conditional Data Fetching",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "Arguments",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "Mutation",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "Pagination",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "Prefetching",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG and SSR",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "Middleware",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "Cache",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "Performance",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "Change Log",
      "type": "doc",
    },
    {
      "frontMatter": {
        "title": "Basic Usage",
      },
      "isUnderCurrentDocsTree": true,
      "name": "basic",
      "route": "/examples/basic",
      "title": "Basic Usage",
      "type": "doc",
    },
    {
      "frontMatter": {
        "title": "Authentication",
      },
      "isUnderCurrentDocsTree": true,
      "name": "auth",
      "route": "/examples/auth",
      "title": "Authentication",
      "type": "doc",
    },
    {
      "frontMatter": {
        "title": "Infinite Loading",
      },
      "isUnderCurrentDocsTree": true,
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "Infinite Loading",
      "type": "doc",
    },
    {
      "frontMatter": {
        "title": "Error Handling",
      },
      "isUnderCurrentDocsTree": true,
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "frontMatter": {
        "title": "Next.js SSR",
      },
      "isUnderCurrentDocsTree": true,
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "frontMatter": {
        "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "isUnderCurrentDocsTree": true,
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "Announcing SWR 1.0",
      "type": "doc",
    },
  ],
  "topLevelNavbarItems": [],
}
`;

exports[`normalize-page > should keep \`activeThemeContext\`, \`activeType\` for hidden route 1`] = `
{
  "activeIndex": 0,
  "activeMetadata": undefined,
  "activePath": [],
  "activeThemeContext": {
    "breadcrumb": true,
    "collapsed": undefined,
    "footer": true,
    "layout": "full",
    "navbar": true,
    "pagination": true,
    "sidebar": false,
    "timestamp": true,
    "toc": false,
    "typesetting": "article",
  },
  "activeType": "page",
  "directories": [],
  "docsDirectories": [],
  "flatDocsDirectories": [],
  "topLevelNavbarItems": [],
}
`;
